<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar_order_history"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/glegoo_bold"
                android:text="@string/txt_toolbar_register"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:hint="@string/txt_full_name"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:hint="@string/txt_email"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:hint="@string/txt_email"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:hint="@string/txt_re_password"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:fontFamily="@font/glegoo_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/txt_registrasi"
            android:textStyle="bold"
            app:cornerRadius="16dp" />

    </LinearLayout>

</ScrollView>
