<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_book"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ranchers_regular"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                android:textSize="29sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <View
                android:id="@+id/view_one"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:hint="@string/txt_username"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_login"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/txt_username"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/white"
            app:boxStrokeWidth="0dp"
            android:visibility="gone"
            android:textColorHint="@color/white"
            app:boxStrokeWidthFocused="0dp"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ColoredHandleThemeForWholeApp"
                android:id="@+id/tie_username"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_login"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            android:hint="@string/txt_password"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/white"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/white"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleTint="@color/colorPrimary"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_login"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:fontFamily="@font/glegoo_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/txt_login"
            android:textStyle="bold"
            app:cornerRadius="16dp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/txt_desc_register"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_social" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login"
            android:adjustViewBounds="true"/>

    </LinearLayout>

</ScrollView>
